[gd_scene load_steps=10 format=3 uid="uid://bmkr81pqhg0vp"]

[ext_resource type="Script" path="res://Levels/stage_11.gd" id="1_e5uc5"]
[ext_resource type="Texture2D" uid="uid://6igewcmoc4lg" path="res://Art/background.png" id="1_s3oj1"]
[ext_resource type="PackedScene" uid="uid://ssaw34y4v1lr" path="res://Levels/HUD.tscn" id="2_1rcb8"]
[ext_resource type="PackedScene" uid="uid://1bk8eq6w84q3" path="res://Characters/Player.tscn" id="3_wq3uo"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_23qee"]
distance = -531.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_54u4m"]
distance = -501.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_h1j0u"]
distance = -2.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_v2lh0"]
distance = -751.0

[sub_resource type="Curve2D" id="Curve2D_sgc11"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -515.36, -274.911, 0, 0, 0, 0, -510.198, 358.578, 0, 0, 0, 0, 605.506, 357.943, 0, 0, 0, 0, 605.506, -278.809, 0, 0, 0, 0, -515.36, -283.154)
}
point_count = 5

[node name="Stage_11" type="Node2D"]
script = ExtResource("1_e5uc5")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -750.0
offset_top = -500.0
offset_right = 2250.0
offset_bottom = 1500.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_s3oj1")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("2_1rcb8")]

[node name="Player" parent="." instance=ExtResource("3_wq3uo")]

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.7, 0.7)
limit_left = -750
limit_top = -500
limit_right = 750
limit_bottom = 500

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-221, 52)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_23qee")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -50)
shape = SubResource("WorldBoundaryShape2D_54u4m")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -500)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_h1j0u")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_v2lh0")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-59.1233, -61.4705)
scale = Vector2(1.35609, 1.57698)
curve = SubResource("Curve2D_sgc11")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-512.02, 135.027)
progress = 409.95
rotates = false

[node name="WormSpawnTimer" type="Timer" parent="."]

[node name="SpeederSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="BigSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="CrabSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="SaucerSpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="WormSpawnTimer" to="." method="_on_worm_spawn_timer_timeout"]
[connection signal="timeout" from="SpeederSpawnTimer" to="." method="_on_speeder_spawn_timer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="BigSpawnTimer" to="." method="_on_big_spawn_timer_timeout"]
[connection signal="timeout" from="CrabSpawnTimer" to="." method="_on_crab_spawn_timer_timeout"]
[connection signal="timeout" from="SaucerSpawnTimer" to="." method="_on_saucer_spawn_timer_timeout"]
